# Seam-Aware-Modeling

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CITATION.cff  CLAUDE_CODE_INSTRUCTIONS.md  CONTRIBUTING.md  EXPERIMENTAL_VALIDATION.md  GITHUB_SETUP.md  LICENSE  PERFORMANCE_ANALYSIS.md  PERFORMANCE_METHODOLOGY_RESULTS.md  PERFORMANCE_RESULTS.md  README.md  RESEARCH_PAPER.md  RESULTS_SUMMARY.md  TEST_RESULTS_FINAL.md  THEORY.md  benchmark_performance.py  pyproject.toml  pytest.ini  reproduce.py  requirements.txt  setup.py  test_detection_performance.py  test_mass_smash.py  test_results.txt
.github/workflows/: tests.yml
apps/: README.md  streamlit_visualizer.py
dmdl-lift/: .gitignore  FROZEN_CONFIG.toml  README.md  pyproject.toml
dmdl-lift/.github/workflows/: ci.yml
dmdl-lift/scripts/: run_validation.py
dmdl-lift/src/dmdl_lift/: cli.py  delta.py  mdl.py  phase.py  plot.py  signal.py  validate.py  words.py
dmdl-lift/tests/: test_mdl.py  test_phase.py  test_validate.py  test_words.py
docs/: architecture.md  experimental_validation.md  github_setup.md  mass_smash_implementation.md  release_checklist.md  theory.md
docs/release_notes/: v0.1.0.md
examples/: README.md  mass_smash.py  quick_start.ipynb
experiments/: comprehensive_validation.py  validation_results.json
outputs/: SEAM_MHD_Report.md  ablation_results.json  benchmark_results.json  bl_peaks.npy  catalog_peaks.npy  injected_crossings.npy  ms_peaks.npy  prediction1_results.json  snr_sweep_results.json
paper/: MASS_SMASH_paper.docx  MASS_SMASH_paper.tex
scripts/: extract_paper_sections.py  generate_animation.py  generate_hero_visuals.py  generate_readme_visuals.py  run_canonical_validation.py
seamaware/: __init__.py  mass.py  pipeline.py
seamaware/cli/: __init__.py  demo.py
seamaware/compression/: __init__.py
seamaware/core/: __init__.py  atoms.py  detection.py  flip_atoms.py  mdl.py  orientation.py  seam_detection.py  validation.py
seamaware/models/: __init__.py  baselines.py  mass_framework.py
seamaware/theory/: __init__.py  k_star.py
seamaware/utils/: __init__.py  synthetic_data.py
tests/: test_edge_cases.py  test_flip_atoms.py  test_k_star_convergence.py  test_mass_smash.py  test_mdl.py  test_performance.py  test_regime_switching.py
validation/: ablation.py  baseline.py  catalog.py  contaminated_benchmark.py  fetch_data.py  multi_seed_sweep.py  pelt_sweep.py  proj_pvi_tandem.py  report.py  rotation_angles.py  run_benchmark.py  run_real_data.py  snr_sweep.py  strong_baselines.py  threshold_sweep.py  update_paper_stats.py
(+14 files in other folders)
