[project]
name = "dmdl-lift"
version = "0.1.0"
description = "Hardened validation pipeline for detecting rank-2 lift with ΔMDL"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
]

[project.scripts]
dmdl-validate = "dmdl_lift.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
